force-app/main/default/objects/Apttus_Config2__ProductAttributeRule__c/Apttus_Config2__ProductAttributeRule__c.object-meta.xml
<CustomObject>
    <description>Represents the rule defintion of a product attribute value.</description>
    <label>Product Attribute Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>