force-app/main/default/objects/Apttus_Config2__ProductAttributeRule__c/fields/Apttus_Config2__AccountScope__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AccountScope__c</fullName>
    <description>One or more accounts associated with the rule</description>
    <inlineHelpText>One or more accounts associated with the rule</inlineHelpText>
    <label>Account Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>