force-app/main/default/objects/Apttus_Config2__ProductAttributeRule__c/fields/Apttus_Config2__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the rule is active</description>
    <inlineHelpText>Indicates whether the rule is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>