force-app/main/default/objects/Apttus_Config2__ProductAttributeRule__c/fields/Apttus_Config2__ConditionCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConditionCriteria__c</fullName>
    <description>The rule criteria specification</description>
    <inlineHelpText>The rule criteria specification</inlineHelpText>
    <label>Condition Criteria</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>