force-app/main/default/objects/Apttus_Config2__ProductAttributeRule__c/fields/Apttus_Config2__ConditionCriteriaExpression__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConditionCriteriaExpression__c</fullName>
    <description>The rule criteria expression</description>
    <inlineHelpText>The rule criteria expression</inlineHelpText>
    <label>Condition Criteria Expression</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>