force-app/main/default/objects/Apttus_Config2__ProductAttributeRule__c/fields/Apttus_Config2__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EffectiveDate__c</fullName>
    <description>Start date when the rule will be effective.</description>
    <inlineHelpText>Leave this blank for always effective.</inlineHelpText>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>