force-app/main/default/objects/Apttus_Config2__ProductAttributeRule__c/fields/Apttus_Config2__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpirationDate__c</fullName>
    <description>End date when rule will stop triggering.</description>
    <inlineHelpText>Leave this blank for always effective rule.</inlineHelpText>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>